<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color"
    tools:context=".ui.screen.AddCardScreen">

    <!--AppBar-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/padding_very_small">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/padding_small"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:foreground="?attr/selectableItemBackground"
            android:padding="@dimen/padding_small"
            android:src="@drawable/ic_add_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/padding_small"
            android:text="@string/fr_cards"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/app_title_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--Body-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="@dimen/padding_standard"
        android:paddingHorizontal="@dimen/padding_big">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adding_card"
            android:textColor="@color/text_color"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/add_info_of_card"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_standard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:elevation="2dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:layout_constraintTop_toBottomOf="@+id/description">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:padding="@dimen/padding_standard">

                <TextView
                    android:id="@+id/cardNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_number"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size_standard"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.vicmikhailau.maskededittext.MaskedEditText
                    android:id="@+id/etCardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textColorHint="@color/hint_color"
                    android:padding="@dimen/padding_standard"
                    android:hint="0000 0000 0000 0000"
                    android:maxLines="19"
                    app:mask="#### #### #### ####"
                    android:layout_marginTop="@dimen/margin_standard"
                    android:background="@drawable/border_edittext"
                    app:layout_constraintTop_toBottomOf="@+id/cardNumber"/>

                <ImageView
                    android:id="@+id/btnScan"
                    android:padding="@dimen/padding_standard"
                    app:layout_constraintBottom_toBottomOf="@id/etCardNumber"
                    app:layout_constraintTop_toTopOf="@id/etCardNumber"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_scan"
                    android:foreground="?attr/selectableItemBackground"
                    android:contentDescription="@string/cards" />

                <TextView
                    android:id="@+id/validity_period"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/validity_period_of_the_card"
                    android:textColor="@color/text_color"
                    android:layout_marginTop="@dimen/margin_standard"
                    android:textSize="@dimen/text_size_standard"
                    app:layout_constraintTop_toBottomOf="@+id/etCardNumber"
                    app:layout_constraintStart_toStartOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/validity_period"
                    android:layout_marginTop="@dimen/margin_standard"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <com.vicmikhailau.maskededittext.MaskedEditText
                        android:id="@+id/etValidityPeriodOfTheCard"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:textColorHint="@color/hint_color"
                        android:padding="@dimen/padding_standard"
                        android:hint="OO/YY"
                        android:maxLines="5"
                        app:mask="##/##"
                        android:background="@drawable/border_edittext"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"/>

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_standard"
            android:text="@string/continue_on"
            android:enabled="false"
            android:textStyle="bold"
            android:foreground="?attr/selectableItemBackground"
            android:textColor="@color/btn_text_color"
            android:background="@drawable/bg_button"
            app:layout_constraintBottom_toBottomOf="parent"/>




    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>